Update and rename config_sample.env to config.env
Signed-off-by: Narendar761 <145740954+Narendar761@users.noreply.github.com>

--- a/config.env
+++ b/config.env
@@ -1,29 +1,27 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
 BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+OWNER_ID = "819861991"                               # Require restart after changing it while bot running
+TELEGRAM_API = "22808125"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "406c09543fec722fe3c48ca2f06d78de"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://Nkbot001:nkbot123@helpy.wfrytzq.mongodb.net/?retryWrites=true&w=majority&appName=Helpy"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-4595278746"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
-DEFAULT_UPLOAD = "gd"
-STATUS_UPDATE_INTERVAL = "10"
-AUTO_DELETE_MESSAGE_DURATION = "60"
+DEFAULT_UPLOAD = "rc"
+STATUS_UPDATE_INTERVAL = "5"
+AUTO_DELETE_MESSAGE_DURATION = "30"
 INCOMPLETE_TASK_NOTIFIER = "False"
 SET_COMMANDS = "False"
 EXTENSION_FILTER = ""
-YT_DLP_OPTIONS = ""
-FSUB_IDS = ""
-BOT_PM = ""
+YT_DLP_OPTIONS = "True"
+FSUB_IDS = "-1001988879902"
+BOT_PM = "True"
 
 # GDrive Tools
 GDRIVE_ID = ""
@@ -34,7 +32,7 @@ USE_SERVICE_ACCOUNTS = "False"
 IS_TEAM_DRIVE = "False"
 STOP_DUPLICATE = "False"
 DISABLE_DRIVE_LINK = "False"
-GD_INFO = "Uploaded by WZML-X"
+GD_INFO = "Uploaded by @N_K_bots"
 
 # API's/Cookies
 REAL_DEBRID_API = ""
@@ -60,23 +58,27 @@ UPGRADE_PACKAGES = ""
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
-MEDIA_GROUP = "False"
+MEDIA_GROUP = "True"
 CAP_FONT = "code"
 LEECH_FILENAME_PREFIX = ""
-LEECH_FILENAME_SUFFIX = ""
-LEECH_FILENAME_CAPTION = ""
+LEECH_FILENAME_SUFFIX = "\s@N_K_bots\s"
+LEECH_FILENAME_CAPTION = "<b>Filename:</b> ~~> <b><i>{filename}</i></b>
+
+     <b>Size:</b> ~~> <spoiler><b><i>{size}</b></i></spoiler>
+
+<b>Time</b>: ~~> <b><i>{time}</b></i> \| @N_K_bots |"
 LEECH_FILENAME_REMNAME = ""
 MIRROR_FILENAME_PREFIX = ""
 MIRROR_FILENAME_SUFFIX = ""
 MIRROR_FILENAME_REMNAME = ""
 
 # Log Channel/SuperGroup (Topics Support)
-LEECH_LOG_ID = ""
-MIRROR_LOG_ID = ""
-LINKS_LOG_ID = ""
+LEECH_LOG_ID = "-1001916142483"
+MIRROR_LOG_ID = "-1001916142483"
+LINKS_LOG_ID = "-1001916142483"
 
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "120"
 BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
@@ -117,9 +119,9 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "WZ-M/L-X"
-AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/WZML_X"
+TITLE_NAME = "N_K_bots"
+AUTHOR_NAME = "N_K_bots"
+AUTHOR_URL = "https://t.me/N_K_bots"
 COVER_IMAGE = ""
 
 # Extra
