--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ AUTHORIZED_CHATS = "-4595278746"                       # Require restart after c
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
-DEFAULT_UPLOAD = "rc"
+DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "5"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 INCOMPLETE_TASK_NOTIFIER = "False"
@@ -93,8 +93,8 @@ RSS_DELAY = "600"
 RSS_CHAT = ""
 
 # Mega
-MEGA_EMAIL = ""
-MEGA_PASSWORD = ""
+MEGA_EMAIL = "udltgi@telegmail.com"
+MEGA_PASSWORD = "narendar@123"
 
 # Limits
 DAILY_TASK_LIMIT = ""
