--- a/config.env
+++ b/config.env
@@ -8,13 +8,13 @@ TELEGRAM_HASH = "406c09543fec722fe3c48ca2f06d78de"                          # Re
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = "mongodb+srv://Nkbot001:nkbot123@helpy.wfrytzq.mongodb.net/?retryWrites=true&w=majority&appName=Helpy"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-CMD_SUFFIX = ""                             # Require restart after changing it while bot running
+CMD_SUFFIX = "1"                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = "-4595278746"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
-STATUS_UPDATE_INTERVAL = "5"
+STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 INCOMPLETE_TASK_NOTIFIER = "False"
 SET_COMMANDS = "False"
